tests/ui/parser/issues/issue-61858.rs
fn main() {
    (if foobar) //~ ERROR expected `{`, found `)`
}

// ferrocene-annotations: fls_mkut7gut49gi
// If Expressions
